--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,8 @@ path = "src/predict/main.rs"
 [dependencies]
 clap = "2.33.3"
 
+[target.train.dependencies]
+plotters = "0.3.1"
+
 [dev-dependencies]
 rand = "0.8.4"
