--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/predict/main.rs"
 [dependencies]
 clap = "2.33.3"
 rand = "0.8.4"
+plotters = "0.3.1"
 
 [target.train.dependencies]
 plotters = "0.3.1"
